@@ -823,4 +823,5 @@
     <string name="master_bedroom">Master  Bedroom</string>
     <string name="outside">Outside</string>
     <string name="upstairs">Upstairs</string>
+    <string name="contact_devs">This Widget type is not handle for now contact devs</string>
 </resources>
