@@ -23,14 +23,15 @@
       % Version 24
       _ 2016-xx-xx
       ! Important do not hesitate to use ACRA crash report to help developer correct those.
-      * Update zeromq.jeromq to version 0.3.6
+      * #37 handle widget not existing
       * #38 more sensor/command types in translation
       * #102 Adding method to read domogik QRCODE configuration
       * Close #118 Add ACRA crash reports feedback by mail
       * Do not open history view if it is empty
-      * #37 Widget_list for orphan datatype (sensor and command)
+      * #37 Widget_list for specific datatype (sensor and command)
       * Close #116 Values saved from datatype for use in Widget_list
       * Close #115 History for boolean widget with translation too
+      * Update zeromq.jeromq to version 0.3.6
       % Version 23
       _ 2016-09-25
       * Some translation for xee and body plugin
